[package]
name = "wasm-graph"
version = "0.1.0"
authors = ["Nikolay Volf <nikvolf@gmail.com>"]
license = "MIT/Apache-2.0"
readme = "README.md"
description = "WASM format graph representation"
keywords = ["wasm", "webassembly", "format"]

[dependencies]
parity-wasm = "0.40"

[dev-dependencies]
wabt = "0.9"
indoc = "0.3"
