[package]
name = "wasm-graph"
version = "0.1.2"
authors = ["Nikolay Volf <nikvolf@gmail.com>"]
license = "MIT/Apache-2.0"
readme = "README.md"
repository = "https://github.com/nikvolf/wasm-graph"
description = "WASM format graph representation"
keywords = ["wasm", "webassembly", "format"]
edition = "2018"

[dependencies]
parity_wasm = { package = "parity-wasm", version = "0.45" }

[dev-dependencies]
wabt = "0.9"
indoc = "0.3"
